docs/tests/parser/expressions/valid/ExprAddressDeref.src
fn void test() {
    let int* p = &x;
    let int val = *p;
}
