docs/tests/parser/expressions/invalid/ExprDoubleOperator.src
fn void test() {
    let int x = 1 + * 2;
}
